--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="hero">
-    <img class="feature-img" src="{{ 'assets/Header.jpg' | relative_url }}" />
+    <img class="feature-img" src="{{ 'assets/header.jpg' | relative_url }}" />
   </div>
   
   <div class="wrapper">
