--- a/docs/_includes/module.html
+++ b/docs/_includes/module.html
@@ -1,5 +1,5 @@
 <div style="clear: both;">
-  <div style="float: left; margin-right 15em; width: 20%">
+  <div style="float: left; padding: 3px 3px 0px 3px; margin-right 15em; width: 23%">
     <img src="{{ include.image_path }}" alt="">
   </div>
   <div>
